# multi-agent-search

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pytest.ini  requirements.txt
.github/workflows/: postgres-smoke.yml
agents/: optimizer.py
alembic/: env.py
alembic/versions/: 20260310_000001_create_initial_tables.py  20260310_000002_create_research_finalize_jobs.py  20260310_000003_create_search_task_jobs.py  20260310_000004_add_job_retries_and_worker_heartbeats.py  20260401_000005_add_extraction_metrics_to_worker_heartbeats.py  20260402_000006_add_search_metrics_to_tasks.py  20260405_000007_add_graph_state_to_researches.py  (+3 more)
native/: .gitignore
native/text_processing/: Cargo.toml
native/text_processing/src/: lib.rs
ops/prometheus/: prometheus.yml
providers/: deepseek.py
scripts/: build_native_module.sh  run_finalize_worker.py  smoke_postgres_runtime.py
src/: bootstrap.py  cli.py  config.py  search_depth_profiles.py  source_quality_policy.py
src/api/: app.py  (+2 more)
tests/: conftest.py  postgres_helpers.py  test_agent.py  test_api.py  test_app_logic.py  test_cleanup_jobs.py  test_config.py  test_db_models.py  test_finalize_jobs_store.py  test_finalize_worker.py  test_graph_history.py  test_job_worker.py  test_maintenance_worker.py  test_recovery_jobs.py  test_repository_mappers.py  test_requeue_jobs.py  test_research_service_postgres.py  test_search_agent_store.py  test_search_jobs_store.py  test_search_provider.py  test_search_worker.py  test_sqlalchemy_task_store.py  test_task_store_factory.py
(+44 files in other folders)
