[package]
name = "multi_agent_search_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "multi_agent_search_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

